# doge

./: CMakeLists.txt  README.md  TODO.md  ToDoList.md  plan.md
archived_developments/gui/include/: gui.hpp
archived_developments/gui/include/gui/: Camera.hpp  CameraComponent.hpp  Clickable.hpp  CursorDetectableElement.hpp  Element.hpp  GUI.hpp  Image.hpp  Scrollable.hpp  Slider.hpp
archived_developments/gui/src/gui/: Button.cpp  Clickable.cpp  Draggable.cpp  Image.cpp  Resizable.cpp  Slider.cpp
example/: RotatingCircle.cpp
examples/: Pong.cpp
include/doge/: components.hpp  core.hpp  doge.hpp  events.hpp  utils.hpp
include/doge/components/: AngularVelocity.hpp  Camera.hpp  CircleCollider.hpp  CircleShape.hpp  CompoundCollider.hpp  CompoundShape.hpp  CompoundSprite.hpp  ConvexCollider.hpp  ConvexShape.hpp  CustomShape.hpp  EdgeCollider.hpp  EntityInfo.hpp  Layer.hpp  PolygonShape.hpp  Position.hpp  RectangleCollider.hpp  RectangleShape.hpp  RigidBody.hpp  Rotation.hpp  Scale.hpp  SceneInfo.hpp  Sprite.hpp  Tag.hpp  Text.hpp  Velocity.hpp
include/doge/core/: AssetManager.hpp  Assets.hpp  Component.hpp  Engine.hpp  Entity.hpp  Events.hpp  GameLoopFunctions.hpp  IOBus.hpp  Image.hpp  PCNode.hpp  Range.hpp  SFMLImpl.hpp  Scene.hpp  Scenes.hpp  Texture.hpp  TextureEx.hpp  VideoSettings.hpp  Window.hpp  WindowSettings.hpp  aliases.hpp  io.hpp
include/doge/core/io/: Controller.hpp  Cursor.hpp  DrawHelpers.hpp  Event.hpp  File.hpp  Font.hpp  Image.hpp  Input.hpp  InputDevice.hpp  Keyboard.hpp  Mouse.hpp  Music.hpp  Renderer.hpp  Sensor.hpp  Sound.hpp  SoundBuffer.hpp  Texture.hpp  Touch.hpp  Window.hpp
include/doge/events/: ControllerButton.hpp  ControllerConnect.hpp  ControllerMove.hpp  Key.hpp  MouseButton.hpp  MouseMove.hpp  MouseWheel.hpp  Sensor.hpp  Size.hpp  Text.hpp  Touch.hpp
include/doge/extensions/: anim.hpp  fsm.hpp  gui.hpp  nine_slice.hpp  physics.hpp
include/doge/extensions/anim/: Anim.hpp  Animation.hpp  State.hpp
include/doge/extensions/fsm/: StateMachine.hpp  StateMachineAutoUpdate.hpp  StateMachines.hpp  fsm.hpp
include/doge/extensions/gui/: Align.hpp  Button.hpp  Camera.hpp  CameraComponent.hpp  Clickable.hpp  Component.hpp  CursorDetectableElement.hpp  Draggable.hpp  Element.hpp  ElementComponent.hpp  GUIComponent.hpp  GUIElement.hpp  GUIElementComponent.hpp  GUIInput.hpp  Image.hpp  NSImage.hpp  Resizable.hpp  Scrollable.hpp  Slider.hpp  Text.hpp  Window.hpp  WindowEx.hpp  gui.hpp
include/doge/extensions/nine_slice/: NineSlice.hpp  NineSliceSpriteFactory.hpp  NineSliceTexture.hpp  Slice.hpp  Sprite.hpp  Texture.hpp  nine_slice.hpp
include/doge/extensions/physics/: Body.hpp  BodyInit.hpp  CircleCollider.hpp  Collider.hpp  CollisionEvents.hpp  CompoundCollider.hpp  ConvexCollider.hpp  EdgeCollider.hpp  Physics.hpp  PhysicsBody.hpp  PhysicsBodyInit.hpp  PhysicsCollider.hpp  RectangleCollider.hpp  RigidBody.hpp  physics.hpp
include/doge/utils/: Color.hpp  DrawableVertices.hpp  Rect.hpp  Time.hpp  Vec2.hpp  Vec3.hpp  aliases.hpp  cast.hpp  conversions.hpp  custom_sf.hpp  default_functions.hpp  global.hpp  lev.hpp  lic.hpp  math.hpp  polygon.hpp  triangulation.hpp  utf8.hpp
include/doge/utils/custom_sf/: DrawableVertices.hpp  Text.hpp
include/doge/utils/polypartition/: polypartition.h
src/: Assets.cpp  CMakeLists.txt  Color.cpp  Engine.cpp  Entity.cpp  IOBus.cpp  Image.cpp  PCNode.cpp  Position.cpp  Range.cpp  SFMLImpl.cpp  Texture.cpp  Velocity.cpp  VideoSettings.cpp  Window.cpp  WindowSettings.cpp  cast.cpp  conversions.cpp  default_functions.cpp  global.cpp  lic.cpp  main.cpp  main0.cpp  main1.cpp  main2.cpp  old_main.cpp  physics.cpp
src/components/: AngularVelocity.cpp  Camera.cpp  CircleCollider.cpp  CircleShape.cpp  CompoundCollider.cpp  CompoundShape.cpp  ConvexCollider.cpp  ConvexShape.cpp  CustomShape.cpp  EdgeCollider.cpp  Position.cpp  RectangleCollider.cpp  RectangleShape.cpp  RigidBody.cpp  Rotation.cpp  Scale.cpp  SceneInfo.cpp  Sprite.cpp  Tag.cpp  Velocity.cpp
src/core/: Assets.cpp  Engine.cpp  Events.cpp  Image.cpp  PCNode.cpp  Texture.cpp  Window.cpp
src/core/io/: Controller.cpp  Cursor.cpp  Event.cpp  File.cpp  Font.cpp  Image.cpp  Input.cpp  InputDevice.cpp  Keyboard.cpp  Mouse.cpp  Music.cpp  Sensor.cpp  Sound.cpp  SoundBuffer.cpp  Texture.cpp  Touch.cpp  Window.cpp
src/extensions/anim/: Anim.cpp
src/extensions/fsm/: fsm.cpp
src/extensions/gui/: Button.cpp  Camera.cpp  Clickable.cpp  Draggable.cpp  Element.cpp  GUIElement.cpp  Image.cpp  NSImage.cpp  Resizable.cpp  Scrollable.cpp  Slider.cpp  Text.cpp  Window.cpp  WindowEx.cpp  gui.cpp
src/extensions/nine_slice/: NineSlice.cpp  NineSliceTexture.cpp  Sprite.cpp  Texture.cpp  nine_slice.cpp
src/extensions/physics/: Body.cpp  Collider.cpp  CollisionEvents.cpp  Physics.cpp  PhysicsBody.cpp  PhysicsCollider.cpp  physics.cpp
src/tests/: main0.hpp  main1.hpp  main2.hpp  main3.hpp  main4.hpp  tests.hpp
src/utils/: Color.cpp  cast.cpp  default_functions.cpp  global.cpp  lic.cpp  math.cpp  polygon.cpp  triangulation.cpp
src/utils/custom_sf/: DrawableVertices.cpp  Text.cpp
src/utils/polypartition/: polypartition.cpp
